# lezh-ai

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
app/: main.py
app/agents/: agent_manager.py  langgraph_agent.py  tools.py
app/api/: wecom.py
app/core/: config.py  wecom_crypto.py
app/services/: jenkins_mcp_service.py  mcp_service.py  wecom_service.py
app/wecom/: crypto.py
tests/: test_agent.py  test_crypto.py  test_wecom_send.py
